--- a/components/test2.ejs
+++ b/components/test2.ejs
@@ -1,1 +1,12 @@
-<p>Hello <%= prop1 %> </p>
+<script>
+var currentScript = $('script').last();
+$(document).ready( function(){
+    if($('body').hasClass('silex-runtime')) {
+        console.log(currentScript.parent().parent())
+        currentScript.parent().parent().click(function() {
+            var body = $("html, body");
+            body.stop().animate({scrollTop:0}, 500, 'swing');
+        })
+    }
+})
+</script>
